Fix scrolling glitch on Safari

--- a/src/styles/BuildingSearchResults.module.css
+++ b/src/styles/BuildingSearchResults.module.css
@@ -19,7 +19,6 @@
 }
 
 .search-list-element {
-  background: var(--search-background);
   border-bottom: 1px solid rgba(0, 0, 0, .1);
 }
 
@@ -43,7 +42,10 @@
   height: 60px;
   font-weight: 500;
   letter-spacing: -.01em;
+}
 
+.search-list-element-sticky {
+  background: var(--search-background);
   position: sticky;
   top: 0;
   left: 0;
